opentelemetry/server/helm/collector/httproute.yaml
# gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: otel-http-gateway
  namespace: observability
spec:
  addresses:
    - type: IPAddress
      value: 192.168.3.100
  # 替换成你集群中实际安装的 Gateway Controller Class 名称
  gatewayClassName: cilium
  listeners:
    - name: otel-http
      protocol: HTTP
      port: 4318
---
# collector-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: collector-otlp-http-route
  namespace: observability
spec:
  parentRefs:
    - name: otel-http-gateway # 绑定到您的 Gateway 名称
  hostnames:
    - "otlp-http.app.com" # <-- 替换成您的应用上报数据所使用的域名
  rules:
    # OTLP 规范要求数据上报到 /v1/traces, /v1/metrics, 或 /v1/logs 路径下
    # 使用 PathPrefix 匹配所有 OTLP v1 路径
    - matches:
        - path:
            type: PathPrefix
            value: /v1
      backendRefs:
        - name: center-collector # OpenTelemetry Collector Service 的名称
          port: 4318             # 路由到 OTLP/HTTP 端口
